feat: Add sharing capabilities and UI animations
Introduces new functionality for sharing chat conversations and enhances the user interface with several new CSS animations.

UI enhancements include:
- New animations: `slide-in-right`, `slide-in-left`, `pulse-bg` for improved visual feedback and user experience.
- Addition of `ShareIcon` and `CheckIcon` components for new UI elements.

Core functionality additions:
- Implements logic to parse shared chat data from URL hashes, allowing users to view imported conversations.
- Updates `useChatHistory` hook to handle importing shared chats and assigning unique IDs to messages.
- Modifies `App.tsx` to manage a `linkCopied` state for sharing feedback.
- Adds a unique `id` field to `Message` interface for better state management.

--- a/index.html
+++ b/index.html
@@ -28,13 +28,34 @@
     from { opacity: 0; transform: translateY(10px); }
     to { opacity: 1; transform: translateY(0); }
   }
+  @keyframes slide-in-right {
+    from { opacity: 0; transform: translateX(20px); }
+    to { opacity: 1; transform: translateX(0); }
+  }
+  @keyframes slide-in-left {
+    from { opacity: 0; transform: translateX(-20px); }
+    to { opacity: 1; transform: translateX(0); }
+  }
+  @keyframes pulse-bg {
+    0%, 100% { background-color: #334155; } /* slate-700 */
+    50% { background-color: #475569; } /* slate-600 */
+  }
+
   .animate-fade-in {
     animation: fade-in 0.3s ease-out forwards;
   }
-  /* Start hidden before animation, fill mode takes care of the end state */
   .animate-slide-in-up {
     animation: slide-in-up 0.3s ease-out forwards;
     opacity: 0; 
+  }
+  .animate-slide-in-right {
+    animation: slide-in-right 0.4s ease-out forwards;
+  }
+  .animate-slide-in-left {
+    animation: slide-in-left 0.4s ease-out forwards;
+  }
+  .animate-pulse-bg {
+    animation: pulse-bg 2s cubic-bezier(0.4, 0, 0.6, 1) infinite;
   }
 </style>
 </head>
